--- a/BeneluxWebb/static/css/components/table/table.css
+++ b/BeneluxWebb/static/css/components/table/table.css
@@ -69,13 +69,13 @@ div[id$="_wrapper"] table.dataTable.custom-hover > tbody > tr:hover {
 /* Cell border radius */
 div[id$="_wrapper"] table.dataTable > thead > tr > td:first-child,
 div[id$="_wrapper"] table.dataTable > tbody > tr > td:first-child {
-  border-top-left-radius: var(--border-radius);
-  border-bottom-left-radius: var(--border-radius);
+  border-top-left-radius: var(--border-radius-sm);
+  border-bottom-left-radius: var(--border-radius-sm);
 }
 div[id$="_wrapper"] table.dataTable > thead > tr > td:last-child,
 div[id$="_wrapper"] table.dataTable > tbody > tr > td:last-child {
-  border-top-right-radius: var(--border-radius);
-  border-bottom-right-radius: var(--border-radius);
+  border-top-right-radius: var(--border-radius-sm);
+  border-bottom-right-radius: var(--border-radius-sm);
 }
 
 
