--- a/BeneluxWebb/static/css/pages/esea/esea_cards.css
+++ b/BeneluxWebb/static/css/pages/esea/esea_cards.css
@@ -143,7 +143,7 @@
   
   gap: 2px;
   padding-inline: 5px;
-  padding-block: 5px;
+  padding-block-end: 5px;
 
   height: calc(var(--team-card-height) * var(--score-boxes-height-scale));
   width: max-content;
@@ -279,10 +279,11 @@
 
 /* === Sub player styling === */
 .sub-players-box {
-  display: grid;
-  grid-template-rows: repeat(5, minmax(0, 1fr));
+  display: flex;
+  flex-direction: column;
 
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: scroll;
   height: calc(var(--team-card-height) * (1 - var(--score-boxes-height-scale)));
   width: calc(var(--players-box-width) * var(--players-sub-width-scale));
   
@@ -300,6 +301,9 @@
   min-width: 0;
 
   overflow: hidden;
+
+  height: auto;
+  flex: 0 0 auto;
 }
 .sub-player {
   display: flex;
