--- a/BeneluxWebb/static/css/pages/esea/esea_card_details_table.css
+++ b/BeneluxWebb/static/css/pages/esea/esea_card_details_table.css
@@ -7,6 +7,7 @@ div[id^="player_stats_table_"][id$="_wrapper"] .player-cell {
   align-items: center;
   gap: 0.25rem;
   min-width: 0;
+  width: 100%; /* Ensure proper responsive behavior */
 }
 
 div[id^="player_stats_table_"][id$="_wrapper"] .player-cell img {
@@ -19,6 +20,7 @@ div[id^="player_stats_table_"][id$="_wrapper"] .player-cell .player-name {
   text-overflow: ellipsis;
   white-space: nowrap;
   min-width: 0;
+  flex-grow: 1; /* Allow name to take available space */
 }
 
 /* Player type styling */
