Added sidebar collapse

--- a/BeneluxWebb/templates/esea/_esea_season.html
+++ b/BeneluxWebb/templates/esea/_esea_season.html
@@ -14,7 +14,7 @@
     {% if loop.first %}
         <div class="division-separator justify-content-between">
             <h3 class="text-left">{{ division_name }}</h3>
-            <button id="expandAllBtn" class="btn btn-custom">Expand All</button>
+            <button id="expandAllBtn" class="btn btn-custom small-text">Expand All</button>
         </div>
         <!-- Skip printing division title here, already printed above -->
     {% else %}
