Added sidebar collapse

--- a/BeneluxWebb/templates/stats/stats_elo.html
+++ b/BeneluxWebb/templates/stats/stats_elo.html
@@ -52,7 +52,7 @@
             <option value="50">50</option>
             <option value="-1">All</option>
         </select>
-        <label for="pageLengthSelect" class="form-label me-2">entries per page</label>
+        <label for="pageLengthSelect" class="form-label me-2">Entries</label>
     </div>
     
     <table id="stats-elo-data-table" class="table custom-data-table custom-striped align-middle table-sm"></table>
