--- a/BeneluxWebb/templates/stats/stats_layout.html
+++ b/BeneluxWebb/templates/stats/stats_layout.html
@@ -30,8 +30,12 @@
 {% block content %}
 <div class="stats-page-wrapper {% block page_class %}{% endblock %}">
 
-    <div class="sidebar left">
+    <div class="sidebar left" id="sidebar-filters">
+        <div class="sidebar-collapser">
+            <i class="material-icons">menu</i>
+        </div>
         <div class="sidebar-content">
+
             <div class="sidebar-header">
                 <span>Navigation</span>
             </div>
