--- a/BeneluxWebb/static/css/components/table/table.css
+++ b/BeneluxWebb/static/css/components/table/table.css
@@ -3,7 +3,7 @@
   --table-row-height: 38px;
   --button-height: 32px;
   --button-padding: 0 12px;
-  --button-font-size: 14px;
+  --button-font-size: .875em;
   --button-border-radius: 4px;
 }
 
@@ -111,6 +111,8 @@ div[id$="_wrapper"] table.dataTable > tbody > tr > td {
   
   vertical-align: middle;
   white-space: nowrap;
+
+  font-size: 0.9em;
 }
 div[id$="_wrapper"] table.dataTable > thead > tr > td:not(:last-child),
 div[id$="_wrapper"] table.dataTable > tbody > tr > td:not(:last-child) {
