--- a/BeneluxWebb/static/css/pages/stats/stats_filters.css
+++ b/BeneluxWebb/static/css/pages/stats/stats_filters.css
@@ -5,8 +5,8 @@
   justify-content: center;
 
   width: 100%;
-  gap: 0.5rem;
-  padding-block: 0.5rem;
+  gap: 0.5em;
+  padding-block: 0.5em;
 }
 
 .flag-img {
