--- a/BeneluxWebb/templates/macros/filters/filter_group.html
+++ b/BeneluxWebb/templates/macros/filters/filter_group.html
@@ -1,11 +1,12 @@
-{% macro checkbox_filter(name, values) %}
+{% macro checkbox_filter(name, values, init_checked=[]) %}
 <div class="filter-group" data-filter-group="{{ name }}">
     {% for val in values %}
-        <input  class="checkbox__input" 
-                type="checkbox" 
-                value="{{ val }}" 
-                name="{{ name }}" 
-                id="{{ name }}-{{ val }}">
+        <input class="checkbox__input"
+                type="checkbox"
+                value="{{ val }}"
+                name="{{ name }}"
+                id="{{ name }}-{{ val }}"
+                {% if val in init_checked %}checked data-default="true"{% endif %}>
         <label class="checkbox__label sidebar-button striped" for="{{ name }}-{{ val }}">{{ val }}</label>
     {% endfor %}
 </div>
